# si_assignment_03_order_service

./: .env  Cargo.toml  DOCKER_README.md  Dockerfile  README.md  build.rs
.github/actions/setup-env/: action.yaml
.github/workflows/: pr-logs.yaml  test-and-deploy.yaml
src/: book_service.rs  grpc.rs  http.rs  main.rs  rest.rs  types.rs
src/http/: mod.rs
src/order_service/: mod.rs
src/rest/: mod.rs
