[package]
name = "si_assignment_03_order_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"]}
tonic = "0.8.2"
prost = "0.11.0"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.8.2"